--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@json2csv/plainjs": "^7.0.3",
     "@nextui-org/react": "^2.1.12",
     "autoprefixer": "^10.4.15",
     "framer-motion": "^10.16.4",
