--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@json2csv/plainjs": "^7.0.3",
     "@nextui-org/react": "^2.1.12",
     "autoprefixer": "^10.4.15",
+    "classnames": "^2.3.2",
     "framer-motion": "^10.16.4",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
